--- a/src/styles/base/mixins/utility-repeater.less
+++ b/src/styles/base/mixins/utility-repeater.less
@@ -10,23 +10,23 @@
         @{selector}: 0 !important;
     }
 
-    .u-@{selector}-xs {
+    .u-@{selector}-x-small {
         @{selector}: @spacing-third !important;
     }
 
-    .u-@{selector}-sm {
+    .u-@{selector}-small {
         @{selector}: @spacing-half !important;
     }
 
-    .u-@{selector}-md {
+    .u-@{selector}-medium {
         @{selector}: @spacing-base !important;
     }
 
-    .u-@{selector}-lg {
+    .u-@{selector}-large {
         @{selector}: @spacing-double !important;
     }
 
-    .u-@{selector}-xl {
+    .u-@{selector}-x-large {
         @{selector}: @spacing-triple !important;
     }
 
