--- a/src/styles/objects/icons.less
+++ b/src/styles/objects/icons.less
@@ -20,20 +20,20 @@
 
     // Icon sizes
 
-    .icon--sm {
-        .icon-size(@icon-sm-size);
+    .icon--small {
+        .icon-size(@icon-small-size);
     }
 
-    .icon--md {
-        .icon-size(@icon-md-size);
+    .icon--medium {
+        .icon-size(@icon-medium-size);
     }
 
-    .icon--lg {
-        .icon-size(@icon-lg-size);
+    .icon--large {
+        .icon-size(@icon-large-size);
     }
 
-    .icon--xl {
-        .icon-size(@icon-xl-size);
+    .icon--x-large {
+        .icon-size(@icon-x-large-size);
     }
 
 
