--- a/src/styles/base/mixins.less
+++ b/src/styles/base/mixins.less
@@ -2,26 +2,25 @@
 // Mixins
 // -------------------------------------------------------
 
-    @import 'mixins/arrows';
-    @import 'mixins/aspect-ratio';
-    @import 'mixins/button';
-    @import 'mixins/center';
-    @import 'mixins/clearfix';
-    @import 'mixins/cover';
-    @import 'mixins/fluid-value';
-    @import 'mixins/font-face';
-    @import 'mixins/grid-framework';
-    @import 'mixins/hamburger';
-    @import 'mixins/hide-text';
-    @import 'mixins/icon-size';
-    @import 'mixins/input-placeholder';
-    @import 'mixins/media-queries';
-    @import 'mixins/modular-scale';
-    @import 'mixins/momentum-scrolling';
-    @import 'mixins/pretty-scrollbars';
-    @import 'mixins/rgba';
-    @import 'mixins/scrim';
-    @import 'mixins/tag-badge';
-    @import 'mixins/text-overflow';
-    @import 'mixins/utility-repeater';
-
+@import "mixins/arrows";
+@import "mixins/aspect-ratio";
+@import "mixins/button";
+@import "mixins/center";
+@import "mixins/clearfix";
+@import "mixins/cover";
+@import "mixins/fluid-value";
+@import "mixins/font-face";
+@import "mixins/grid-framework";
+@import "mixins/hamburger";
+@import "mixins/hide-text";
+@import "mixins/icon-size";
+@import "mixins/input-placeholder";
+@import "mixins/media-queries";
+@import "mixins/modular-scale";
+@import "mixins/momentum-scrolling";
+@import "mixins/pretty-scrollbars";
+@import "mixins/rgba";
+@import "mixins/scrim";
+@import "mixins/tag-badge";
+@import "mixins/text-overflow";
+@import "mixins/utility-repeater";
