--- a/src/styles/utilities/visibility.less
+++ b/src/styles/utilities/visibility.less
@@ -25,14 +25,14 @@
     }
 
 
-    // Extra-small
+    // Extra-smallall
 
-    .u-hide-xs-up {
+    .u-hide-x-small-up {
         display: none !important;
     }
 
     @media @x-small-down {
-        .u-hide-xs-down {
+        .u-hide-x-small-down {
             display: none !important;
         }
     }
@@ -40,12 +40,12 @@
     // Small
 
     @media @small-up {
-        .u-hide-sm-up {
+        .u-hide-small-up {
             display: none !important;
         }
     }
     @media @small-down {
-        .u-hide-sm-down {
+        .u-hide-small-down {
             display: none !important;
         }
     }
@@ -53,13 +53,13 @@
     // Medium
 
     @media @medium-down {
-        .u-hide-md-up {
+        .u-hide-medium-up {
             display: none !important;
         }
     }
 
     @media @medium-down {
-        .u-hide-md-down {
+        .u-hide-medium-down {
             display: none !important;
         }
     }
@@ -67,13 +67,13 @@
     // Large
 
     @media @large-up {
-        .u-hide-lg-up {
+        .u-hide-large-up {
             display: none !important;
         }
     }
 
     @media @large-down {
-        .u-hide-lg-down {
+        .u-hide-large-down {
             display: none !important;
         }
     }
@@ -81,12 +81,12 @@
     // Extra-large
 
     @media @x-large-up {
-        .u-hide-xl-up {
+        .u-hide-x-large-up {
             display: none !important;
         }
     }
 
-    .u-hide-xl-down {
+    .u-hide-x-large-down {
         display: none !important;
     }
 
