fix media-query issues

--- a/src/styles/base/mixins/media-queries.less
+++ b/src/styles/base/mixins/media-queries.less
@@ -56,7 +56,7 @@
 
 // Medium
 
-@medium-down: ~"(min-width: @{breakpoint-medium-min})";
+@medium-up: ~"(min-width: @{breakpoint-medium-min})";
 @medium-down: ~"(max-width: @{breakpoint-medium-max})";
 @medium-only: ~"(min-width: @{breakpoint-medium-min}) and (max-width: @{breakpoint-medium-max})";
 
