--- a/src/styles/base/typography.less
+++ b/src/styles/base/typography.less
@@ -45,7 +45,7 @@
     h1,
     .h1 {
         font-size: @heading1-font-size-small;
-        @media @medium-down {
+        @media @medium-up {
             font-size: @heading1-font-size;
         }
     }
@@ -53,7 +53,7 @@
     h2,
     .h2 {
         font-size: @heading2-font-size-small;
-        @media @medium-down {
+        @media @medium-up {
             font-size: @heading2-font-size;
         }
     }
@@ -61,7 +61,7 @@
     h3,
     .h3 {
         font-size: @heading3-font-size-small;
-        @media @medium-down {
+        @media @medium-up {
             font-size: @heading3-font-size;
         }
     }
@@ -69,14 +69,14 @@
     h4,
     .h4 {
         font-size: @heading4-font-size-small;
-        @media @medium-down {
+        @media @medium-up {
             font-size: @heading4-font-size;
         }
     }
     h5,
     .h5 {
         font-size: @heading5-font-size-small;
-        @media @medium-down {
+        @media @medium-up {
             font-size: @heading5-font-size;
         }
     }
@@ -84,7 +84,7 @@
     h6,
     .h6 {
         font-size: @heading6-font-size-small;
-        @media @medium-down {
+        @media @medium-up {
             font-size: @heading6-font-size;
         }
     }
@@ -94,7 +94,7 @@
     .display-1 {
         font-size: @display1-font-size-small;
         font-weight: @display1-font-weight;
-        @media @medium-down {
+        @media @medium-up {
             font-size: @display1-font-size;
         }
     }
@@ -102,7 +102,7 @@
     .display-2 {
         font-size: @display2-font-size-small;
         font-weight: @display2-font-weight;
-        @media @medium-down {
+        @media @medium-up {
             font-size: @display2-font-size;
         }
     }
@@ -110,7 +110,7 @@
     .display-3 {
         font-size: @display3-font-size-small;
         font-weight: @display3-font-weight;
-        @media @medium-down {
+        @media @medium-up {
             font-size: @display3-font-size;
         }
     }
@@ -118,7 +118,7 @@
     .display-4 {
         font-size: @display4-font-size-small;
         font-weight: @display4-font-weight;
-        @media @medium-down {
+        @media @medium-up {
             font-size: @display4-font-size;
         }
     }
