--- a/src/styles/objects/grid.less
+++ b/src/styles/objects/grid.less
@@ -46,7 +46,7 @@
 
         // Container Medium
         .use-screen-medium(@boolean) when (@boolean =true) {
-            @media @medium-down {
+            @media @medium-up {
                 .container {
                     width: @container-medium;
                 }
