--- a/src/styles/utilities/current-media-query.less
+++ b/src/styles/utilities/current-media-query.less
@@ -28,7 +28,7 @@
             @media @small-up {
                 content: "@small";
             }
-            @media @medium-down {
+            @media @medium-up {
                 content: "@medium";
             }
             @media @large-up {
