--- a/src/styles/utilities/visibility.less
+++ b/src/styles/utilities/visibility.less
@@ -52,7 +52,7 @@
 
     // Medium
 
-    @media @medium-down {
+    @media @medium-up {
         .u-hide-medium-up {
             display: none !important;
         }
