--- a/src/styles/base/mixins/button.less
+++ b/src/styles/base/mixins/button.less
@@ -36,10 +36,10 @@
 // Button Theme
 .button-theme(
     @color: @button-default-color,
-    @background: @button-default-bg,
+    @background: @button-default-background,
     @border-color: @button-default-border,
     @hover-color: @button-default-hover-color,
-    @hover-background: @button-default-hover-bg,
+    @hover-background: @button-default-hover-background,
     @hover-border-color: @button-default-hover-border,
     @active-color: @hover-color,
     @active-background: @hover-background,
