--- a/src/styles/objects/buttons.less
+++ b/src/styles/objects/buttons.less
@@ -86,11 +86,11 @@
     //
     // Button styles
     .button--primary {
-        .button-theme( @button-primary-color, @button-primary-bg, @button-primary-border, @button-primary-hover-color, @button-primary-hover-bg, @button-primary-hover-border);
+        .button-theme( @button-primary-color, @button-primary-background, @button-primary-border, @button-primary-hover-color, @button-primary-hover-background, @button-primary-hover-border);
     }
 
     .button--secondary {
-        .button-theme( @button-secondary-color, @button-secondary-bg, @button-secondary-border, @button-secondary-hover-color, @button-secondary-hover-bg, @button-secondary-hover-border);
+        .button-theme( @button-secondary-color, @button-secondary-background, @button-secondary-border, @button-secondary-hover-color, @button-secondary-hover-background, @button-secondary-hover-border);
     }
 }
 
