--- a/src/styles/base/variables.less
+++ b/src/styles/base/variables.less
@@ -362,25 +362,25 @@
 @button-link-hover-decoration:          @link-hover-decoration;
 
 @button-default-color:                  @base-color;
-@button-default-bg:                     transparent;
+@button-default-background:             transparent;
 @button-default-border:                 @button-default-color;
 @button-default-hover-color:            @white;
-@button-default-hover-bg:               @button-default-color;
+@button-default-hover-background:       @button-default-color;
 @button-default-hover-border:           @button-default-color;
 
 @button-primary-color:                  @white;
-@button-primary-bg:                     @color-primary;
-@button-primary-border:                 @button-primary-bg;
+@button-primary-background:             @color-primary;
+@button-primary-border:                 @button-primary-background;
 @button-primary-hover-color:            @white;
-@button-primary-hover-bg:               @color-primary-accent;
-@button-primary-hover-border:           @button-primary-bg;
+@button-primary-hover-background:       @color-primary-accent;
+@button-primary-hover-border:           @button-primary-background;
 
 @button-secondary-color:                @white;
-@button-secondary-bg:                   @color-secondary;
-@button-secondary-border:               @button-secondary-bg;
+@button-secondary-background:           @color-secondary;
+@button-secondary-border:               @button-secondary-background;
 @button-secondary-hover-color:          @white;
-@button-secondary-hover-bg:             @color-secondary-accent;
-@button-secondary-hover-border:         @button-secondary-bg;
+@button-secondary-hover-background:     @color-secondary-accent;
+@button-secondary-hover-border:         @button-secondary-background;
 
 
 // TABLES
