utility text inherit

--- a/src/styles/base/variables.less
+++ b/src/styles/base/variables.less
@@ -575,6 +575,7 @@
 @use-margins:                           true;
 @use-paddings:                          true;
 @use-text-alignment:                    true;
+@use-text-inherit:                      true;
 @use-text-color:                        true;
 @use-text-weight:                       true;
 @use-utility-classes:                   true;
