--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -45,6 +45,7 @@
 @import "utilities/margins";
 @import "utilities/paddings";
 @import "utilities/text-alignment";
+@import "utilities/text-inherit";
 @import "utilities/text-weight";
 @import "utilities/text-color";
 @import "utilities/utility-classes";
