correct variable name

--- a/src/styles/base/variables.less
+++ b/src/styles/base/variables.less
@@ -310,7 +310,8 @@
 @checkbox-radio-background:             @input-background;
 @checkbox-radio-size:                   @spacing-base;
 @checkbox-radio-border-width:           @input-border-width;
-@checkbox-radio-margin:                 @spacing-half;
+@checkbox-radio-vertical-margin:        @spacing-half;
+@checkbox-radio-left-padding:           @spacing-fourth;
 @checkbox-checked-color:                currentColor;
 @checkbox-checked-background:           transparent;
 @checkbox-checked-size:                 19px;
