--- a/src/styles/base/variables.less
+++ b/src/styles/base/variables.less
@@ -71,30 +71,30 @@
 @color-warning:                         #ed9c28;
 
 // Social Media colors
-@color-behance:                         #1769ff;
-@color-dribbble:                        #ea4c89;
+@color-dribbble:                        #EA4C89;
 @color-dropbox:                         #007ee5;
-@color-facebook:                        #3b5998;
+@color-facebook:                        #3B5998;
 @color-flickr:                          #0063dc;
-@color-foursquare:                      #f94877;
+@color-foursquare:                      #FC4575;
 @color-github:                          #181717;
 @color-google:                          #4285f4;
 @color-heimo:                           #ffb549;
-@color-instagram:                       #125688;
-@color-linkedin:                        #0077b5;
+@color-instagram:                       #C32AA3;
+@color-linkedin:                        #007BB6;
 @color-medium:                          #00ab6b;
 @color-mixcloud:                        #314359;
-@color-pinterest:                       #bd081c;
+@color-pinterest:                       #CB2027;
 @color-rss:                             #ffa500;
-@color-skype:                           #00aff0;
+@color-snapchat:                        #FFFC00;
+@color-skype:                           #00AFF0;
 @color-souncloud:                       #ff3300;
-@color-spotify:                         #84bd00;
+@color-spotify:                         #1ED760;
 @color-tumblr:                          #36465d;
-@color-twitter:                         #55acee;
-@color-vimeo:                           #1ab7ea;
+@color-twitter:                         #00B6F1;
+@color-vimeo:                           #45BBFF;
 @color-whatsapp:                        #25D366;
-@color-wordpress:                       #21759b;
-@color-youtube:                         #cd201f;
+@color-wordpress:                       #25D366;
+@color-youtube:                         #FF0000;
 
 // Basic colors for body
 @base-color:                            @grey-800;
