--- a/src/styles/base/forms.less
+++ b/src/styles/base/forms.less
@@ -24,6 +24,7 @@
         color: @label-color;
         font-family: @label-font-family;
         font-size: @label-font-size;
+        font-weight: @label-font-weight;
     }
 
     input[type="date"],
