--- a/src/styles/objects/media.less
+++ b/src/styles/objects/media.less
@@ -52,7 +52,7 @@
     .media--2-1 {
         .aspect-ratio(2, 1);
     }
-    .media--fit {
+    .media--cover {
         > *:first-child {
             object-fit: cover;
             object-position: center;
