--- a/src/styles/objects/form-fields.less
+++ b/src/styles/objects/form-fields.less
@@ -40,7 +40,7 @@
                 display: flex;
                 align-items: center;
                 > .field {
-                    flex: 1 1 auto; // claim available space
+                    flex: 1; // claim available space
                     margin-bottom: 0;
                     padding-left: (@grid-gutter-width / 2);
                     padding-right: (@grid-gutter-width / 2);
