add dead-simple debug-mode

--- a/src/styles/base/variables.less
+++ b/src/styles/base/variables.less
@@ -1,9 +1,10 @@
 // DEBUG
 // -------------------------------------------------------
 // Enabling current media query, displays currently used
-// media query.
+// media query. Debug-mode outlines every element.
 // DO NOT USE IN PRODUCTION!
 @use-current-media-query:               true;
+@use-debug-mode:                        false;
 
 
 // GRID & BREAKPOINTS
