--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -10,6 +10,7 @@
 
 // Utilities for development
 @import "utilities/current-media-query";
+@import "utilities/debug-mode";
 
 // Base CSS
 @import "base/resets";
