new media ratios

--- a/src/styles/objects/media.less
+++ b/src/styles/objects/media.less
@@ -34,8 +34,14 @@
     .media--3-4 {
         .aspect-ratio(3, 4);
     }
+    .media--4-5 {
+        .aspect-ratio(4, 5);
+    }
     .media--1 {
         .aspect-ratio(1, 1);
+    }
+    .media--5-4 {
+        .aspect-ratio(5, 4);
     }
     .media--4-3 {
         .aspect-ratio(4, 3);
