--- a/src/partials/favicons.html
+++ b/src/partials/favicons.html
@@ -1,3 +1,7 @@
+<link rel="manifest" href="images/favicons/manifest.json">
+<meta name="mobile-web-app-capable" content="yes">
+<meta name="theme-color" content="#ffffff">
+<meta name="application-name" content="RAE">
 <link rel="apple-touch-icon" sizes="57x57" href="images/favicons/apple-touch-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="images/favicons/apple-touch-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="images/favicons/apple-touch-icon-72x72.png">
@@ -10,7 +14,11 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <meta name="apple-mobile-web-app-title" content="RAE">
+<link rel="icon" type="image/png" sizes="228x228" href="images/favicons/coast-228x228.png">
 <link rel="yandex-tableau-widget" href="images/favicons/yandex-browser-manifest.json">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="images/favicons/mstile-144x144.png">
+<meta name="msapplication-config" content="images/favicons/browserconfig.xml">
 <link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 480px) and (-webkit-device-pixel-ratio: 1)" href="images/favicons/apple-touch-startup-image-320x460.png">
 <link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 480px) and (-webkit-device-pixel-ratio: 2)" href="images/favicons/apple-touch-startup-image-640x920.png">
 <link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)" href="images/favicons/apple-touch-startup-image-640x1096.png">
@@ -21,15 +29,6 @@
 <link rel="apple-touch-startup-image" media="(device-width: 768px) and (device-height: 1024px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 1)" href="images/favicons/apple-touch-startup-image-768x1004.png">
 <link rel="apple-touch-startup-image" media="(device-width: 768px) and (device-height: 1024px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2)" href="images/favicons/apple-touch-startup-image-1496x2048.png">
 <link rel="apple-touch-startup-image" media="(device-width: 768px) and (device-height: 1024px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2)" href="images/favicons/apple-touch-startup-image-1536x2008.png">
-<link rel="icon" type="image/png" sizes="228x228" href="images/favicons/coast-228x228.png">
-<meta name="msapplication-TileColor" content="transparent">
-<meta name="msapplication-TileImage" content="images/favicons/mstile-144x144.png">
-<meta name="msapplication-config" content="images/favicons/browserconfig.xml">
-<link rel="manifest" href="images/favicons/manifest.json">
-<meta name="mobile-web-app-capable" content="yes">
-<meta name="theme-color" content="transparent">
-<meta name="application-name" content="RAE">
 <link rel="icon" type="image/png" sizes="32x32" href="images/favicons/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="192x192" href="images/favicons/android-chrome-192x192.png">
 <link rel="icon" type="image/png" sizes="16x16" href="images/favicons/favicon-16x16.png">
 <link rel="shortcut icon" href="images/favicons/favicon.ico">
