--- a/src/styles/objects/media.less
+++ b/src/styles/objects/media.less
@@ -10,12 +10,12 @@
 
     .media {
         .aspect-ratio-container();
-        background: @media-background;
+        background: transparent;
         iframe,
         object,
         embed,
         video {
-            display: block;
+            border: 0;
         }
     }
     // Media Ratios
