--- a/src/styles/objects/icons.less
+++ b/src/styles/objects/icons.less
@@ -6,6 +6,7 @@
     .icon {
         fill: currentColor;
         display: inline-block;
+        flex-shrink: 0;
         height: 1em;
         width: 1em;
         vertical-align: middle;
