--- a/src/styles/objects/form-styles.less
+++ b/src/styles/objects/form-styles.less
@@ -2,10 +2,12 @@
 // Form styles
 // -------------------------------------------------------
 .use-form-styles(@boolean) when (@boolean =true) {
+
     // Fieldset with borders
     fieldset.fieldset--bordered {
         border: @fieldset-border-width @fieldset-border-style @fieldset-border-color;
         padding: @spacing-half @spacing-base @spacing-base @spacing-base;
+
         legend {
             padding: 0 @spacing-half;
             margin: 0 0 0 (@spacing-half * -1);
@@ -47,29 +49,35 @@
         height: @input-height;
         padding: 0 @input-horizontal-padding;
         transition: background @transition-duration-default @transition-easing-default, color @transition-duration-default @transition-easing-default, opacity @transition-duration-default @transition-easing-default, border @transition-duration-default @transition-easing-default;
+
         &:hover {
             border-color: @input-border-color-hover;
             background: @input-hover-background;
         }
+
         &:focus {
             border-color: @input-border-color-focus;
         }
     }
+
     textarea,
     select[multiple] {
         height: auto;
         padding-top: ((@input-height - (@input-font-size * @line-height-base)) / 2);
         padding-bottom: ((@input-height - (@input-font-size * @line-height-base)) / 2);
     }
+
     // Range input
     input[type=range] {
         -webkit-appearance: none;
         margin: (@range-thumb-height / 2) 0;
+
         .track() {
             height: @range-track-height;
             cursor: pointer;
             transition: background @transition-duration-default;
         }
+
         .thumb() {
             height: @range-thumb-height;
             width: @range-thumb-width;
@@ -80,9 +88,11 @@
             box-shadow: @range-thumb-box-shadow;
             cursor: pointer;
         }
+
         &:focus {
             outline: none;
         }
+
         &::-webkit-slider-runnable-track {
             .track();
             box-shadow: @range-track-box-shadow;
@@ -91,14 +101,17 @@
             border-width: @range-track-border-width;
             border-color: @range-track-border-color;
         }
+
         &::-webkit-slider-thumb {
             -webkit-appearance: none;
             .thumb();
             margin-top: ((-@range-track-border-width * 2 + @range-track-height) / 2) - (@range-thumb-height / 2);
         }
+
         &:focus::-webkit-slider-runnable-track {
             background-color: darken(@range-track-color, 5%);
         }
+
         &::-moz-range-track {
             .track();
             box-shadow: @range-track-box-shadow;
@@ -107,9 +120,11 @@
             border-width: @range-track-border-width;
             border-color: @range-track-border-color;
         }
+
         &::-moz-range-thumb {
             .thumb();
         }
+
         &::-ms-track {
             .track();
             background-color: transparent;
@@ -117,6 +132,7 @@
             border-width: @range-thumb-width 0;
             color: transparent;
         }
+
         &::-ms-fill-lower {
             background-color: darken(@range-track-color, 5%);
             border-width: @range-track-border-width;
@@ -124,6 +140,7 @@
             border-radius: @range-track-border-radius*2;
             box-shadow: @range-track-box-shadow;
         }
+
         &::-ms-fill-upper {
             background-color: @range-track-color;
             border-width: @range-track-border-width;
@@ -131,12 +148,15 @@
             border-radius: @range-track-border-radius*2;
             box-shadow: @range-track-box-shadow
         }
+
         &::-ms-thumb {
             .thumb();
         }
+
         &:focus::-ms-fill-lower {
             background-color: @range-track-color;
         }
+
         &:focus::-ms-fill-upper {
             background-color: darken(@range-track-color, 5%);
         }
@@ -144,25 +164,30 @@
 
     // Select
     select:not([multiple]) {
+        -moz-appearance: none;
+        -webkit-appearance: none;
+        appearance: none;
         cursor: pointer;
         background-image: url('../../images/icons/select.svg');
         background-position: right center;
         background-repeat: no-repeat;
         background-size: contain;
-        padding-right: 2.4em;
-        -moz-appearance: none; // Firefox 36+
-        -webkit-appearance: none; // Chrome 41+
+        padding: 0 2.4em 0 @input-horizontal-padding;
+
         &::-ms-expand {
             display: none; // Internet Explorer 11+
         }
+
         &::-ms-value {
             color: currentColor; // Internet Explorer 11+
         }
+
         &:focus:-moz-focusring {
             // Remove ugly focus in FF
             color: transparent;
             text-shadow: 0 0 0 @input-color;
         }
+
         &:hover,
         &:focus {
             background-image: url('../../images/icons/select_hover.svg');
@@ -173,9 +198,11 @@
     .radio,
     .checkbox {
         user-select: none;
+
         & + & {
             margin-top: @checkbox-radio-vertical-margin; // add some spacing between checkboxes/radios
         }
+
         // Inline styles
         &.checkbox--inline,
         &.radio--inline {
@@ -185,20 +212,24 @@
                 margin-right: @spacing-half; // space out consecutive inline controls
             }
         }
+
         // Hide inputs
         input {
             display: none;
         }
+
         // Overwrite unstyled radios and checkboxes
         input + label {
             display: block;
         }
+
         // Control inputs with label
         label {
             position: relative;
             padding-left: (@checkbox-radio-size + @checkbox-radio-left-padding);
             line-height: @checkbox-radio-size;
             min-height: @checkbox-radio-size; // makes empty label possible
+
             &:before,
             &:after {
                 content: '';
@@ -209,32 +240,38 @@
                 height: @checkbox-radio-size;
                 line-height: @checkbox-radio-size;
             }
+
             &:before {
                 background: @checkbox-radio-background;
                 border: @checkbox-radio-border-width solid @input-border-color;
                 box-shadow: @input-box-shadow;
                 transition: border-color @transition-duration-default @transition-easing-default;
             }
+
             &:after {
                 transform: scale(0) rotate(45deg);
                 transition: transform 100ms @transition-easing-default;
             }
+
             &:hover::before {
                 border-color: @input-border-color-hover;
             }
         }
+
         input:checked {
             + label:after {
                 transform: scale(1) rotate(45deg);
             }
         }
     }
+
     // Checkbox styles
     .checkbox {
         label {
             &:before {
                 border-radius: @checkbox-border-radius;
             }
+
             // Checked tick
             &:after {
                 border: solid @checkbox-checked-color;
@@ -246,6 +283,7 @@
                 top: @checkbox-checked-y;
             }
         }
+
         input:checked {
             + label:before {
                 & when not(@checkbox-checked-background =transparent) {
@@ -256,12 +294,14 @@
             }
         }
     }
+
     // Radio styles
     .radio {
         label {
             &:before {
                 border-radius: 100%;
             }
+
             // Checked radio
             &:after {
                 background: @radio-checked-color;
@@ -274,19 +314,22 @@
 
     // Input modifiers
     .use-input-modifiers(@boolean) when (@boolean =true) {
+
         // Input sizes
         input.input--small,
         select.select--small,
-        textarea.textarea--small{
+        textarea.textarea--small {
             height: @input-small-height;
             font-size: @input-small-font-size;
         }
+
         input.input--large,
         select.select--large,
         textarea.textarea--large {
             height: @input-large-height;
             font-size: @input-large-font-size;
         }
+
         // Input variations
         input.input--underlined,
         select.select--underlined,
@@ -296,17 +339,20 @@
             padding-left: 0;
             padding-right: 0;
         }
+
         input.input--pill,
         select.select--pill {
             border-radius: 999em;
             padding-left: (@input-horizontal-padding * 2);
             padding-right: (@input-horizontal-padding * 2);
         }
+
         input.input--opaque,
         select.select--opaque,
-        textarea.textarea--opaque{
+        textarea.textarea--opaque {
             background-color: transparent;
         }
+
         input.input--unstyled,
         select.select--unstyled,
         textarea.textarea--unstyled {
@@ -317,6 +363,7 @@
             height: auto;
             background-color: transparent;
             box-shadow: none;
+
             &:focus,
             &:hover {
                 outline: none;
@@ -324,10 +371,12 @@
                 background-color: transparent;
             }
         }
+
         textarea.textarea--unstyled {
             resize: none;
         }
     }
+
     .use-input-modifiers(@use-input-modifiers);
 
     // Input placeholder color
