--- a/src/partials/analytics.html
+++ b/src/partials/analytics.html
@@ -9,7 +9,7 @@
         a.async = 1;
         a.src = g;
         m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', 'http://www.google-analytics.com/analytics.js', 'ga');
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
     ga('create', '<!-- @echo UA -->', 'auto');
     ga('send', 'pageview');
 </script>
