--- a/src/styles/base/embedded-content.less
+++ b/src/styles/base/embedded-content.less
@@ -25,6 +25,11 @@
         height: 100%;
     }
 
+    // Fill video with poster image
+    video {
+        object-fit: initial;
+    }
+
     figure {
         margin: 0 0 @spacing-base 0;
     }
