--- a/src/styles/objects/form-fields.less
+++ b/src/styles/objects/form-fields.less
@@ -1,85 +1,105 @@
 //
 // Form fields
 // -------------------------------------------------------
-    .use-form-fields(@boolean) when (@boolean =true) {
-        // Field
-        .field {
-            display: block;
-            position: relative;
-            clear: both;
-            margin: 0 0 @form-field-margin 0;
-            &:last-child {
-                margin-bottom: 0;
-            }
-            > label {
-                margin: 0 0 @label-vertical-margin 0;
-            }
+.use-form-fields(@boolean) when (@boolean =true) {
+
+    // Field
+    .field {
+        display: block;
+        position: relative;
+        clear: both;
+        margin-bottom: @form-field-margin;
+
+        > label {
+            margin: 0 0 @label-vertical-margin 0;
+        }
+    }
+
+    .field--inline {
+        display: flex;
+        align-items: center;
+
+        label {
+            margin: 0 @label-horizontal-margin 0 0;
+            flex-shrink: 0; // fix for iOS
         }
 
-        .field--inline {
+        input,
+        select {
+            flex-shrink: 1; // fix for IE10
+        }
+    }
+
+    // Field-groups, only for larger screens
+    .field-group {
+        position: relative;
+        margin-bottom: @form-field-margin;
+        width: 100%;
+
+        &:last-child,
+        &:last-child .field:last-child {
+            margin-bottom: 0;
+        }
+
+        @media (min-width: (@field-group-breakpoint)) {
             display: flex;
-            align-items: center;
-            label {
-                margin: 0 @label-horizontal-margin 0 0;
-                flex-shrink: 0; // fix for iOS
-            }
-            input,
-            select {
-                flex-shrink: 1; // fix for IE10
-            }
-        }
+            align-items: center stretch;
 
-        // Field-groups, only for larger screens
-        .field-group {
-            margin-bottom: @form-field-margin;
-            &:last-child,
-            &:last-child .field:last-child {
+            > .field {
+                flex: 1 1 auto; // claim available space
+                width: 1%;
                 margin-bottom: 0;
-            }
-            @media (min-width: (@field-group-breakpoint)) {
-                display: flex;
-                align-items: center;
-                > .field {
-                    flex: 1; // claim available space
-                    margin-bottom: 0;
-                    padding-left: (@grid-gutter-width / 2);
-                    padding-right: (@grid-gutter-width / 2);
-                    &:first-child {
-                        padding-left: 0;
-                    }
-                    &:last-child {
-                        padding-right: 0;
-                    }
+                padding-left: (@grid-gutter-width / 2);
+                padding-right: (@grid-gutter-width / 2);
+
+                &:first-child {
+                    padding-left: 0;
                 }
-            }
-        }
 
-        .field-group--half {
-            @media (min-width: (@field-group-breakpoint)) {
-                .field {
-                    padding-left: (@grid-gutter-width / 4);
-                    padding-right: (@grid-gutter-width / 4);
-                }
-            }
-        }
-
-        .field-group--inline {
-            @media (min-width: (@field-group-breakpoint)) {
-                > .field {
-                    display: flex;
-                    align-items: center;
-
-                    label {
-                        margin: 0 @label-horizontal-margin 0 0;
-                        flex-shrink: 0; // fix for iOS
-
-                    }
-                    input,
-                    select {
-                        flex-shrink: 1; // fix for IE10
-                    }
+                &:last-child {
+                    padding-right: 0;
                 }
             }
         }
     }
-    .use-form-fields(@use-form-fields);
+
+    .field-group--half {
+        @media (min-width: (@field-group-breakpoint)) {
+            .field {
+                padding-left: (@grid-gutter-width / 4);
+                padding-right: (@grid-gutter-width / 4);
+            }
+        }
+    }
+
+    .field-group--flush {
+        @media (min-width: (@field-group-breakpoint)) {
+            .field {
+                padding-left: 0;
+                padding-right: 0;
+            }
+        }
+    }
+
+    .field-group--inline {
+        @media (min-width: (@field-group-breakpoint)) {
+            > .field {
+                display: flex;
+                align-items: center;
+
+                label {
+                    margin: 0 @label-horizontal-margin 0 0;
+                    flex-shrink: 0; // fix for iOS
+
+                }
+
+                input,
+                select {
+                    flex-shrink: 1; // fix for IE10
+                }
+            }
+        }
+    }
+}
+
+.use-form-fields(@use-form-fields);
