add utility text colors

--- a/src/styles/utilities/text-color.less
+++ b/src/styles/utilities/text-color.less
@@ -7,6 +7,18 @@
         opacity: .5 !important;
     }
 
+    .u-color-white {
+        color: @white !important;
+    }
+
+    .u-color-black {
+        color: @black !important;
+    }
+
+    .u-color-base {
+        color: @base-color !important;
+    }
+
     .u-color-primary {
         color: @color-primary !important;
     }
