--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -40,6 +40,7 @@
 @import "objects/tooltips";
 
 // Utilities
+@import "utilities/colors";
 @import "utilities/display";
 @import "utilities/flex-alignment";
 @import "utilities/floats";
@@ -48,7 +49,6 @@
 @import "utilities/text-alignment";
 @import "utilities/text-inherit";
 @import "utilities/text-weight";
-@import "utilities/text-color";
 @import "utilities/utility-classes";
 @import "utilities/visibility";
 @import "utilities/vertical-align";
@@ -58,7 +58,7 @@
 //@import 'vendor/';
 
 // Components
-//@import 'components/';
+@import 'components/hero';
 
 // Pages
 //@import 'pages/';
